--- a/src/components/ContactList.css
+++ b/src/components/ContactList.css
@@ -6,6 +6,10 @@
     background-color: grey;
     padding: 5px;
 }
+.contact-list .striped{
+    background-color: rgb(87, 86, 86);
+    padding: 5px;
+}
 .contact-list .contact:hover{
     background-color: beige;
     color: black;
